--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<h1>Welcome Laaisacat!</h1>
 		<p>you can do something here...</p>
 		<p>by objcat</p>
+		<iframe src="components/green/green.html" style="width: 100%;height: 1000px;" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 	</body>
 </html>
